--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"/>
-    <link rel="stylesheet" href="./fontawesome-free-6.1.1-web/css/all.css">  
+      content="Web site created using create-react-app"
+    />
+    <link rel="stylesheet" href="./fontawesome-free-6.1.1-web/css/all.css" />
     <title>Uconnect</title>
   </head>
   <body>
